TokenExchange Change Log
=========================

Version 1.3.0
  - Move TokenExchange tables to a separate schema to avoid conflicts
  - Null pointer exception if redemption account does not have currency
  
Version 1.2.0
  - Add TokenExchange ssetExchangeRate API to modify the exchange rate
  - HEIGHT column already defined when creating a new database
  - Incorrect chain height stored in bitcoin transaction
  - Begin SQL transaction before updating bitcoin block chain
  
Version 1.1.0
  - TokenExchange no longer uses Bitcoin wallet notifications
    - walletnotify.sh is no longer used
    - TokenExchange TransactionReceived API removed
  - Handle Bitcoin block chain reorganizations
  - Handle wallet transactions received while TokenExchange was not running
  
Version 1.0.0
  - Initial release